# Plugin-Loader

./: .gitignore  CMakeLists.txt  README.md
Loader/: CMakeLists.txt
Loader/Include/: loader.hpp
Loader/Source/: loader.cpp  main.cpp
Plugin/: CMakeLists.txt
Plugin/Include/: plugin.hpp
Plugin/Source/: plugin.cpp
